# fastapi-sqlalchemy-template

./: .gitignore  README.md  fastapicf.py  pyproject.toml
src/: main.py
src/controller/user_api/: user.py
src/core/: config.py  constants.py  events.py
src/database/: mysqldb.py  redisdb.py
src/exception/: Exception.py
src/repository/: user_repositroy.py
src/router/: router.py  user_api_router.py
src/service/: user_service.py
src/util/: path_util.py
