[tool.poetry]
name = "template-fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["oliver <lifefossil@outlook.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
dev = "src.main:start"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = {extras = ["asyncmy"], version = "^1.4.46"}
aioredis = "^2.0.1"
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
